Apply Java 17 several features